Refactor exploratory analysis of passenger survival predictions using ridge logistic regression

--- a/exploration/predict_survival_using_logistic_regression_with_sex_age_title/analysis.ipynb
+++ b/exploration/predict_survival_using_logistic_regression_with_sex_age_title/analysis.ipynb
@@ -351,7 +351,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Feature Engineering"
+    "# REFACTORED Feature Engineering"
    ]
   },
   {
@@ -454,36 +454,7 @@
     }
    ],
    "source": [
-    "# Extract the Title from the name\n",
-    "\n",
-    "simplify_title = {\n",
-    "    \"Capt\": \"Officer\",\n",
-    "    \"Col\": \"Officer\",\n",
-    "    \"Major\": \"Officer\",\n",
-    "    \"Jonkheer\": \"Royalty\",\n",
-    "    \"Don\": \"Royalty\",\n",
-    "    \"Sir\": \"Royalty\",\n",
-    "    \"Dr\": \"Officer\",\n",
-    "    \"Rev\": \"Officer\",\n",
-    "    \"the Countess\": \"Royalty\",\n",
-    "    \"Dona\": \"Royalty\",\n",
-    "    \"Mme\": \"Mrs\",\n",
-    "    \"Mlle\": \"Miss\",\n",
-    "    \"Ms\": \"Mrs\",\n",
-    "    \"Mr\": \"Mr\",\n",
-    "    \"Mrs\": \"Mrs\",\n",
-    "    \"Miss\": \"Miss\",\n",
-    "    \"Master\": \"Master\",\n",
-    "    \"Lady\": \"Royalty\"\n",
-    "}\n",
-    "\n",
-    "df[\"Title\"] = df[\"Name\"].apply(\n",
-    "    lambda full_name: (\n",
-    "        simplify_title[\n",
-    "            full_name.split(\",\")[1].split(\".\")[0].strip()\n",
-    "        ]))\n",
-    "\n",
-    "df[\"Title\"] = df[\"Title\"].astype(\"category\")\n",
+    "df = data.extract_title(df)\n",
     "df.head()"
    ]
   },
